--- a/flex2.html
+++ b/flex2.html
@@ -7,7 +7,7 @@
     <title>CSS Position 실습 1</title>
     <!-- TODO -->
     <!-- prac_1.css 파일 연결하기 -->
-    <link rel='stylesheet' href="flex1.css"/>
+    <link rel='stylesheet' href="flex2.css"/>
   </head>
   <body>
     <div class="contain">
@@ -15,6 +15,14 @@
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
+
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div> 
         
   </body>
 </html>
