--- a/flex3.html
+++ b/flex3.html
@@ -7,14 +7,23 @@
     <title>CSS Position 실습 1</title>
     <!-- TODO -->
     <!-- prac_1.css 파일 연결하기 -->
-    <link rel='stylesheet' href="flex1.css"/>
+    <link rel='stylesheet' href="flex3.css"/>
   </head>
   <body>
-    <div class="contain">
-        
+    <div class="contain1">
         <div class="box"></div>
         <div class="box"></div>
+        <div class="box"></div>     
+    </div>
+    <div class="contain2">
         <div class="box"></div>
-        
+        <div class="box"></div>
+        <div class="box"></div>     
+    </div>
+    <div class="contain3">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>     
+    </div>
   </body>
 </html>
